--- a/src/app/master/customer/customer-search/customer-search.component.html
+++ b/src/app/master/customer/customer-search/customer-search.component.html
@@ -3,17 +3,64 @@
   <div class="row">
 
     <div class="col-sm-6">
-
       <div class="form-group row">
-        <label class="col-sm-4 form-label form-label-sm" for="">Name</label>
+        <label class="col-sm-4 form-label form-lable-sm">Date Type</label>
         <div class="col-sm-8">
-          <app-input type="text" formControlName="cust_name"> </app-input>
+          <app-combobox maxlength="30" formControlName="cust_date_type" name="cust_date_type" [dataSource]="typeList"
+            [valueColumn]="'key'" [displayColumn]="'value'" case="UPPER"></app-combobox>
         </div>
       </div>
-
+      <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Date Range</label>
+        <div class="col-sm-4">
+          <app-date type="text" formControlName="cust_from_date" [format]="gs.globalConstants.global_date_format"
+            [placeholder]="gs.globalConstants.global_date_format"> </app-date>
+        </div>
+        <div class="col-sm-4">
+          <app-date type="text" formControlName="cust_to_date" [format]="gs.globalConstants.global_date_format"
+            [placeholder]="gs.globalConstants.global_date_format"> </app-date>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Created By</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="cust_created_by" case="UPPER"> </app-input>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Edited By</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="cust_edited_by" case="UPPER"> </app-input>
+        </div>
+      </div>
     </div>
 
     <div class="col-sm-6">
+      <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Code</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="cust_code" case="UPPER"> </app-input>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Name</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="cust_name" case="UPPER"> </app-input>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-4 form-label form-label-sm" for="">Firm Code</label>
+        <div class="col-sm-8">
+          <app-input type="text" formControlName="cust_firm_code" case="UPPER"> </app-input>
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="col-sm-12">
+          <app-checkbox formControlName="cust_is_blackacc"></app-checkbox>
+          <label class="ms-1 form-label form-label-sm">Black Account</label>
+        </div>
+      </div>
+
       <div class="form-group row">
         <div class="col-sm-12">
           <button class="btn btn-sm btn-success" (click)="search('search')">Search</button>
