--- a/src/app/marketing1/qtnmlcl/qtnmlcl-edit/qtnmlcl-edit.component.html
+++ b/src/app/marketing1/qtnmlcl/qtnmlcl-edit/qtnmlcl-edit.component.html
@@ -31,7 +31,7 @@
           <label class="col-sm-4 form-label form-lable-sm" for="">Date</label>
           <div class="col-sm-8">
             <app-date formControlName="qtnm_date" [format]="gs.globalConstants.global_date_format"
-              placeholder="mm-dd-yyyy"></app-date>
+            [placeholder]="gs.globalConstants.global_date_format"></app-date>
           </div>
         </div>
         <div class="form-group row">
@@ -79,7 +79,7 @@
           <label class="col-sm-2 form-label form-lable-sm" for="">Validity</label>
           <div class="col-sm-3">
             <app-date maxlength="100" formControlName="qtnm_valid_date" [format]="gs.globalConstants.global_date_format"
-              placeholder="mm-dd-yyyy"></app-date>
+            [placeholder]="gs.globalConstants.global_date_format" ></app-date>
           </div>
         </div>
       </div>
