--- a/src/app/master/wiretransm/wiretransm-edit/wiretransm-edit.component.html
+++ b/src/app/master/wiretransm/wiretransm-edit/wiretransm-edit.component.html
@@ -77,7 +77,7 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">Date</label>
           <div class="col-sm-8">
-            <app-date formControlName="wtim_date" [format]="gs.globalConstants.global_date_format" required></app-date>
+            <app-date formControlName="wtim_date" [format]="gs.globalConstants.global_date_format" [placeholder]="gs.globalConstants.global_date_format" required></app-date>
           </div>
         </div>
         <div class="form-group row">
