--- a/src/app/shared/history/history.component.html
+++ b/src/app/shared/history/history.component.html
@@ -1,8 +1,1 @@
-<h1 mat-dialog-title>{{data.title}}</h1>
-<div mat-dialog-content>
-  <p>{{data.message}}</p>
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onCancelClick()">Cancel</button>
-  <button mat-button cdkFocusInitial (click)="onNoClick()">Ok</button>
-</div>
+<button class="btn btn-success btn-sm" (click)="openHistory()">History</button>
