--- a/src/app/master/customer/customer-edit/customer-edit.component.html
+++ b/src/app/master/customer/customer-edit/customer-edit.component.html
@@ -2,8 +2,9 @@
   <h5>{{title}}</h5>
   <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/masters/customerEdit"
     [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
-  <button class="btn btn-success btn-sm ml-2" (click)="openHistory()">History</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
+  <app-history [input]="{table: 'mast_customerm', id:id}"></app-history>
+
 </div>
 
 <form [formGroup]="mform">
@@ -48,7 +49,8 @@
           <div class="col-sm-8">
             <auto-complete formControlName="cust_parent_name" id="cust_parent_name" (CallBack)="callBack($event)"
               [table]="'customerm'" [company_id]="getCompanyId()" [url]="url" [filter]="{cust_is_parent : 'Y'}"
-              display_column="[{'caption':'code','value':'cust_id'},{'caption':'name','value':'cust_name'}]" required></auto-complete>
+              display_column="[{'caption':'code','value':'cust_id'},{'caption':'name','value':'cust_name'}]"
+              required></auto-complete>
           </div>
         </div>
         <div class="form-group row">
@@ -81,7 +83,8 @@
           <div class="col-sm-8">
             <auto-complete formControlName="cust_state_name" id="cust_state_name" (CallBack)="callBack($event)"
               [table]="'param'" [subtable]="'state'" [company_id]="getCompanyId()" [url]="url"
-              display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]" required></auto-complete>
+              display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"
+              required></auto-complete>
           </div>
         </div>
         <div class="form-group row">
@@ -89,7 +92,8 @@
           <div class="col-sm-8">
             <auto-complete formControlName="cust_country_name" id="cust_country_name" (CallBack)="callBack($event)"
               [table]="'param'" [subtable]="'country'" [company_id]="getCompanyId()" [url]="url"
-              display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]" required></auto-complete>
+              display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"
+              required></auto-complete>
           </div>
         </div>
 
@@ -184,19 +188,20 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">Credit-Limit</label>
           <div class="col-sm-3">
-            <app-input formControlName="cust_credit_limit" type="number" [dec]="gs.globalConstants.global_dec_places" [align]="'center'"
-              (blur)="onBlur($event)">
+            <app-input formControlName="cust_credit_limit" type="number" [dec]="gs.globalConstants.global_dec_places"
+              [align]="'center'" (blur)="onBlur($event)">
             </app-input>
           </div>
           <label class="col-sm-2 form-label form-lable-sm" for="">Credit Days</label>
           <div class="col-sm-3">
-            <app-input maxlength="100" formControlName="cust_days" type="number" [align]="'center'"  ></app-input>
+            <app-input maxlength="100" formControlName="cust_days" type="number" [align]="'center'"></app-input>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">Est-Date</label>
           <div class="col-sm-8">
-            <app-date formControlName="cust_est_dt" [format]="gs.globalConstants.global_date_format" [placeholder]="gs.globalConstants.global_date_format"></app-date>
+            <app-date formControlName="cust_est_dt" [format]="gs.globalConstants.global_date_format"
+              [placeholder]="gs.globalConstants.global_date_format"></app-date>
           </div>
         </div>
       </div>
@@ -369,7 +374,8 @@
               formControlName="cust_criteria"></app-combobox>
           </div>
           <div class="col-sm-4">
-            <app-input formControlName="cust_min_profit" type="number" [dec]="gs.globalConstants.global_dec_places" ></app-input>
+            <app-input formControlName="cust_min_profit" type="number"
+              [dec]="gs.globalConstants.global_dec_places"></app-input>
           </div>
         </div>
         <div class="form-group row">
@@ -569,7 +575,8 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">BondExp/Date</label>
           <div class="col-sm-8">
-            <app-date formControlName="cust_bond_expdt" [format]="gs.globalConstants.global_date_format" [placeholder]="gs.globalConstants.global_date_format"></app-date>
+            <app-date formControlName="cust_bond_expdt" [format]="gs.globalConstants.global_date_format"
+              [placeholder]="gs.globalConstants.global_date_format"></app-date>
           </div>
         </div>
       </div>
