--- a/src/app/user-admin/user/user-edit/user-edit.component.html
+++ b/src/app/user-admin/user/user-edit/user-edit.component.html
@@ -3,6 +3,7 @@
   <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/admin/userEdit"
     [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
+  <app-history [inputdata]="{table: 'mast_userm', id:id}"></app-history>
 </div>
 
 <form [formGroup]="mform">
