log history added to multiple repositories

--- a/src/app/marketing1/qtnmfcl/qtnmfcl-edit/qtnmfcl-edit.component.html
+++ b/src/app/marketing1/qtnmfcl/qtnmfcl-edit/qtnmfcl-edit.component.html
@@ -130,8 +130,8 @@
             </tr>
           </thead>
 
-          <tbody formArrayName="qtnm_fcl">
-            <tr *ngFor="let iRow of formArray('qtnm_fcl').controls; let i=index;" [formGroupName]="i">
+          <tbody formArrayName="qtnd_fcl">
+            <tr *ngFor="let iRow of formArray('qtnd_fcl').controls; let i=index;" [formGroupName]="i">
               <td align="centre" (click)="editFcldetails(i)" class="link">
                 <i class="fa fa-pencil"></i>
               </td>
