--- a/src/app/airexport/airexport/airexport-list/airexport-list.component.html
+++ b/src/app/airexport/airexport/airexport-list/airexport-list.component.html
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h5>{{title}}</h5>
-  <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/marketing/qtnmfclEdit"
+  <button *ngIf="bAdd" class="btn btn-success btn-sm" routerLink="/airexport/airexportEdit"
     [queryParams]="{id :0,mode:'add',menuid:menuid,type:type,  appid:appid}">New</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
@@ -11,18 +11,18 @@
 </div>
 
 <div class="page-pagination">
-  <app-page [search_url]="'/api/Marketing/Qtnmfcl/GetListAsync'" [page]="ms.getPageRecord()"
+  <app-page [search_url]="'/api/Airexport/GetListAsync'" [page]="ms.getPageRecord()"
     (pageEvents)="pageEvents($event)"></app-page>
 </div>
 
 <div class="page-body">
   <app-table [table]="table_data" [data]="ms.getRecords()" (callback_table)="callback_table($event)"
-    [delete_url]="'/api/Marketing/Qtnmfcl/DeleteAsync'" [sort_column]="ms.sortColumn" [sort_order]="ms.sortOrder"
-    [row_id_name]="'qtnm_id'" [selected_id]="ms.selectedRow">
+    [delete_url]="'/api/Airexport/DeleteAsync'" [sort_column]="ms.sortColumn" [sort_order]="ms.sortOrder"
+    [row_id_name]="'mbl_id'" [selected_id]="ms.selectedRow">
   </app-table>
 </div>
 
 <div class="page-pagination line-bottom">
-  <app-page [search_url]="'/api/Marketing/Qtnmfcl/GetListAsync'" [page]="ms.getPageRecord()"
+  <app-page [search_url]="'/api/Airexport/GetListAsync'" [page]="ms.getPageRecord()"
     (pageEvents)="pageEvents($event)"></app-page>
 </div>
